--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -10,6 +10,13 @@ services:
   portainer:
     image: portainer/portainer-ce
     
+  discountdb:
+    image: postgres
+  
+  pgadmin:
+    image: dpage/pgadmin4
+
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -25,3 +32,5 @@ services:
 volumes:
   mongo_data:
   portainer_data:
+  postgres_data:
+  pgadmin_data:
